--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-All code is written in the Python programming language.
+All code is written in the Python programming language
 
 ==Getting Started==
 To clone:
